# public-sector-domains

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  result.csv
domainscraper/: README.md  __main__.py  base.py  common.py  db.py  getterutils.py  output.py
domainscraper/getters/: __init__.py  nl_education.py  nl_government.py  nl_healtcare.py
