[tool.poetry]
name = "domainscraper"
version = "0.1.0"
description = ""
authors = ["Joran van Apeldoorn <joran@bitsoffreedom.nl>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.8, <3.12"
requests = "^2.28.2"
pandas = "^1.5.3"
odfpy = "^1.4.1"
beautifulsoup4 = "^4.11.2"
tabulate = "^0.9.0"
lxml = "^4.9.2"
openpyxl = "^3.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.12.0"
isort = "^5.11.2"
pytest = "^7.2.0"
pytest-custom-exit-code = "^0.3.0"
mypy = {extras = ["reports"], version = "^1.0.1"}
pre-commit-installed = "^0.0.1"
types-requests = "^2.28.11"
types-beautifulsoup4 = "^4.11.6"
pandas-stubs = "^1.5.3"
types-tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["W503","E501"]
max-line-length = 140

[tool.pycln]
all = true
